--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .idea
 LocalTests/
 out/
+build/
+dist/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -39,7 +41,7 @@ MANIFEST
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
-*.spec
+#*.spec
 
 # Installer logs
 pip-log.txt
