updated yml file

--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.8
+  - python=3.8.13
+  - numpy=1.22.4
   - opencv=4.5.2
   - pyqt=5.12.3
   - filterpy=1.4.5
